name:                coverbot
version:             1.0.0.0
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable coverbot
  main-is:           Main.hs
  build-depends:     base == 4.6.*
                   , aeson == 0.8.*
                   , base-prelude == 0.1.*
                   , bytestring == 0.10.*
                   , configurator
                   , containers >= 0.5.0.0
                   , directory >= 1.2.0.1
                   , lens == 4.*
                   , lens-aeson == 1.0.0.3
                   , text >= 0.11.3.1
                   , time >= 1.4.0.1
                   , wreq >= 0.1.0.1
